--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,4 @@ typing_extensions==4.12.2
 tzdata==2025.1
 uritemplate==4.1.1
 django-autocomplete-light==3.12.1
+djangorestframework-simplejwt==5.5.0
