--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 asgiref==3.8.1
 attrs==25.1.0
-Django==5.1.6
+Django==5.1.7   #5.1.6 tiene una alerta de seguridad.
 djangorestframework==3.15.2
 drf-spectacular==0.28.0
 drf-spectacular-sidecar==2025.2.1
