--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 asgiref==3.8.1
 attrs==25.1.0
-Django==5.1.8   #5.1.6 tiene una alerta de seguridad.
+Django==5.1.8
+django-autocomplete-light==3.12.1
 djangorestframework==3.15.2
+djangorestframework_simplejwt==5.5.0
 drf-spectacular==0.28.0
 drf-spectacular-sidecar==2025.2.1
+gunicorn==23.0.0
 inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+packaging==25.0
 psycopg2-binary==2.9.10
+PyJWT==2.9.0
+python-dotenv==1.1.0
 PyYAML==6.0.2
 referencing==0.36.2
 rpds-py==0.22.3
@@ -15,5 +21,4 @@ sqlparse==0.5.3
 typing_extensions==4.12.2
 tzdata==2025.1
 uritemplate==4.1.1
-django-autocomplete-light==3.12.1
-djangorestframework-simplejwt==5.5.0
+whitenoise==6.9.0
