--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,4 +20,4 @@ jobs:
           pip install -r requirements.txt
       - name: Run tests
         run: |
-          python manage.py test
+          python manage.py test --settings=poject_sma.settings_test
