--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+anyio==4.9.0
 asgiref==3.8.1
 attrs==25.1.0
+click==8.1.8
+colorama==0.4.6
 Django==5.1.8
 django-autocomplete-light==3.12.1
 djangorestframework==3.15.2
@@ -7,6 +10,9 @@ djangorestframework_simplejwt==5.5.0
 drf-spectacular==0.28.0
 drf-spectacular-sidecar==2025.2.1
 gunicorn==23.0.0
+h11==0.14.0
+httptools==0.6.4
+idna==3.10
 inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
@@ -17,8 +23,12 @@ python-dotenv==1.1.0
 PyYAML==6.0.2
 referencing==0.36.2
 rpds-py==0.22.3
+sniffio==1.3.1
 sqlparse==0.5.3
 typing_extensions==4.12.2
 tzdata==2025.1
 uritemplate==4.1.1
+uvicorn==0.34.2
+watchfiles==1.0.5
+websockets==15.0.1
 whitenoise==6.9.0
